--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:clean": "rimraf coverage/",
     "test:coverage": "jest --coverage src/",
     "test:spec:echo.route": "jest src/routes/__tests__/echo.route.spec.js",
+    "test:spec:projectHandler.function": "jest src/functions/__tests__/projectHandler.function.spec.js",
     "postversion": "npm publish"
   },
   "dependencies": {
