--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   },
   "dependencies": {
     "@knowdev/errors": "^1.4.0",
+    "@knowdev/http": "^1.1.3",
     "@knowdev/log": "^0.4.0",
     "@vendia/serverless-express": "^4.10.4",
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "@knowdev/http": "^1.1.2",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
@@ -38,6 +38,7 @@
     "jest-extended": "^4.0.0",
     "jest-json-schema": "^6.1.0",
     "lint-staged": "^13.2.2",
+    "mock-express-response": "^0.3.0",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "sort-package-json": "^2.4.1",
