--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:spec:decorateResponse.util": "jest ./src/util/__tests__/decorateResponse.util.spec.js",
     "test:spec:echo.route": "jest src/routes/__tests__/echo.route.spec.js",
     "test:spec:getCurrentInvokeUuid.adapter": "jest ./src/util/adapters/__tests__/getCurrentInvokeUuid.adapter.spec.js",
+    "test:spec:httpRoute-projectHandler.function": "jest src/functions/__tests__/httpRoute-projectHandler.function.spec.js",
     "test:spec:httpRoute.function": "jest ./src/functions/__tests__/httpRoute.function.spec.js",
     "test:spec:projectHandler-decorateResponse.function": "jest src/functions/__tests__/projectHandler-decorateResponse.function.spec.js",
     "test:spec:projectHandler.function": "jest src/functions/__tests__/projectHandler.function.spec.js",
