--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:spec:projectHandler.module:decorateResponse": "jest src/modules/projectHandler/__tests__/projectHandler-decorateResponse.function.spec.js",
     "test:spec:projectHandler.module:express": "jest src/modules/projectHandler/__tests__/projectHandler-express.function.spec.js",
     "test:spec:projectHandler.module": "jest src/modules/projectHandler/__tests__/projectHandler.module.spec.js",
+    "test:spec:summarizeRequest.util": "jest src/util/__tests__/summarizeRequest.util.spec.js",
     "postversion": "npm publish"
   },
   "dependencies": {
