chore: config: dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
+    "efgh",
     "Finlayson",
     "hygen",
+    "ijklmnopqrst",
     "knowdev",
     "postversion",
     "roadmap",
