--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@knowdev/express",
-  "version": "0.8.3",
+  "version": "0.8.4-0",
   "description": "Express on AWS Lambda toolkit",
   "license": "UNLICENSED",
   "author": "Adam Finlayson",
